# predict-element-instead-of-sequence

./: .gitignore  LICENSE  README.md  pyproject.toml
pred_elem_seq/: __init__.py  plot.py  schedules.py  simulation.py  surrogate.py  utilities.py  weather.py
tests/: conftest.py  test_plot.py  test_schedules.py  test_surrogate.py  test_utilities.py
